# 2025r__ChinaShiftShareUpdating

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: README.md  globals.yaml  params.yaml  schemas.yaml
data_work/: README.md
data_work/interim/: README.md
data_work/logs/: README.md
data_work/meta/: README.md
data_work/output/: README.md
data_work/output/dummy/diagnostics/: validation_report.json
data_work/output/dummy/results/: first_stage.csv  main_p0.csv  main_p1.csv  main_p2.csv
data_work/output/dummy/tables/: p0-p1-p2_batch.html  p0_batch.html  p0_export_CHN.tex  p0_export_CHN_doc.tex  p0_export_JPN.tex  p0_export_JPN_doc.tex  p0_export_USA.tex  p0_export_USA_doc.tex  p0_export_WLD_minus_IDN.tex  p0_export_WLD_minus_IDN_doc.tex  p0_import_CHN.tex  p0_import_CHN_doc.tex  p0_specbook.tex
data_work/processed/: README.md
data_work/raw/: README.md
scripts/: README.md  export_specbook.py  export_tables_batch.py
scripts/R/: README.md  export_specbook.R  export_tables.R  export_tables_batch.R  orchestrate.R  run_etable.R
scripts/R/lib/: README.md  config.R  dummy_generators.R  estimation.R  utils.R  validation.R
scripts/python/: orchestrator.py
scripts/python/lib/: __init__.py  cli_utils.py  config_loader.py  io_utils.py  registry.py
tests/: test_registry.py
